--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="red_light">#FFef9a9a</color>
+    <color name="red">#FFf44336</color>
+    <color name="red__dark">#FFd32f2f</color>
+
+    <color name="green_light">#FFa5d6a7</color>
+    <color name="green">#FF4caf50</color>
+    <color name="green_dark">#FF388e3c</color>
+
+    <color name="teal_light">#FF52c7b8</color>
+    <color name="teal">#FF009688</color>
+    <color name="teal_dark">#FF00675b</color>
+
+    <color name="orange_light">#FFffcc80</color>
+    <color name="orange">#FFff9800</color>
+    <color name="orange_dark">#FFf57c00</color>
+
+    <color name="deep_orange_light">#FFff8a50</color>
+    <color name="deep_orange">#FFff5722</color>
+    <color name="deep_orange_dark">#FFc41c00</color>
+
+    <color name="gray_light">#FFeeeeee</color>
+    <color name="gray">#FF9e9e9e</color>
+    <color name="gray_dark">#FF616161</color>
+
+    <color name="yellow_light">#FFfff59d</color>
+    <color name="yellow">#FFffeb3b</color>
+    <color name="yellow_dark">#FFfbc02d</color>
+
+    <color name="blue_light">#FF90caf9</color>
+    <color name="blue">#FF2196f3</color>
+    <color name="blue_dark">#FF1976d2</color>
+
+    <color name="cyan_light">#FF62efff</color>
+    <color name="cyan">#FF00bcd4</color>
+    <color name="cyan_dark">#FF008ba3</color>
+
+    <color name="brown_light">#FFbcaaa4</color>
+    <color name="brown">#FF795548</color>
+    <color name="brown_dark">#FF5d4037</color>
+
+    <color name="blue_gray_light">#FF8eacbb</color>
+    <color name="blue_gray">#FF607d8b</color>
+    <color name="blue_gray_dark">#FF34515e</color>
+
+    <color name="dark_gray">#FF2e3133</color>
+
+    <color name="pink">#FFde3c91</color>
 </resources>
